--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   test:
     parallelism: 2
     docker:
-      - image: circleci/openjdk:stretch
+      - image: circleci/openjdk:8-jdk-stretch-node
     steps:
       - checkout
       - restore_cache:
