--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
 
   build:
     docker:
-      - image: circleci/openjdk:stretch
+      - image: circleci/openjdk:8-jdk-stretch-node
     steps:
       - checkout
       - restore_cache:
