--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,7 @@ jobs:
           keys:
             - v1-dependencies-{{ checksum "pom.xml" }}
             - v1-dependencies-
-      - run: |
-          ./mvnw -s .circleci.settings.xml -Dmaven.test.skip=true deploy
+      - run: ./mvnw -X -s .circleci.settings.xml -Dmaven.test.skip=true deploy
   test:
     docker:
       - image: circleci/openjdk:8-jdk-stretch-node
@@ -21,8 +20,7 @@ jobs:
           keys:
             - v1-dependencies-{{ checksum "pom.xml" }}
             - v1-dependencies-
-      - run: |
-          ./mvnw -s .circleci.settings.xml test verify
+      - run: ./mvnw -s .circleci.settings.xml test verify
   build:
     docker:
       - image: circleci/openjdk:8-jdk-stretch-node
